# model-runner

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  METRICS.md  Makefile  README.md  docker_gen.sh  go.mod  go.sum  go.work  go.work.sum  main.go  main_test.go
.github/: dependabot.yaml
.github/workflows/: ci.yml  cli-build.yml  cli-validate.yml  dmr-daily-check.yml  release.yml
charts/docker-model-runner/: CONTRIBUTING.md  Chart.yaml  Makefile  README.md  values.yaml
charts/docker-model-runner/static/: docker-model-runner-desktop.yaml  docker-model-runner-eks.yaml  docker-model-runner-smollm2.yaml  docker-model-runner.yaml
charts/docker-model-runner/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  service.yaml
cmd/cli/: .gitignore  Dockerfile  Makefile  README.md  docker-bake.hcl  go.mod  go.sum  main.go
cmd/cli/commands/: backend.go  compose.go  configure.go  df.go  images.go  images_test.go  inspect.go  install-runner.go  install-runner_test.go  install_runner.go  list.go  logs.go  nim.go  nim_test.go  package.go  ps.go  pull.go  purge.go  push.go  reinstall-runner.go  reinstall-runner_test.go  requests.go  restart-runner.go  rm.go  root.go  run.go  run_test.go  (+10 more)
cmd/mdltool/: main.go  main_test.go
demos/extractor/: .gitignore  README.md  demo.html  package.json  server.js
demos/multimodal/: README.md  demo.html
llamacpp/: Makefile  cann.Dockerfile  musa.Dockerfile
llamacpp/native/: CMakeLists.txt  README.md  cann.Dockerfile  cuda.Dockerfile  generic.Dockerfile  install-clang.sh  install-vulkan.sh  musa.Dockerfile  rocm.Dockerfile
llamacpp/native/src/nv-gpu-info/: CMakeLists.txt  nv-gpu-info.c
llamacpp/native/src/server/: CMakeLists.txt  Makefile  README.md  server.cpp  server.patch
pkg/diskusage/: diskusage.go
pkg/distribution/: Makefile  README.md
pkg/gpuinfo/: gpuinfo.go  memory_darwin.go  memory_linux.go  memory_windows.go  metal.h  metal.m  nvidia.c  nvidia.h
pkg/inference/: api.go  backend.go  cors.go  platform.go
pkg/metrics/: aggregated_handler.go  metrics.go  openai_recorder.go  openai_recorder_test.go
pkg/middleware/: cors.go  cors_test.go
pkg/routing/: routing.go
pkg/sandbox/: sandbox.go  sandbox_darwin.go  sandbox_other.go  sandbox_test.go  sandbox_windows.go  sandbox_windows_test.go
pkg/tailbuffer/: tailbuffer.go  tailbuffer_test.go
scripts/: apt-install.sh  docker-run.sh
(+168 files in other folders)
